--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,7 @@
 @import './default.css';
 @import './header.css';
+@import '/sidebar.css';
+@import '/posts.css';
 @import '/home.css';
 @import './fontFamily.css';
 @import './topbar.css' ;
