--- a/public/css/posts.css
+++ b/public/css/posts.css
@@ -1,46 +1,60 @@
-.posts{
+
+
+.posts {
     flex: 9;
     margin-bottom: 30px;
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-}
-.posts .post {
-    width: calc(50%-20px);
+    width:75%;
+    position: absolute;
+    left: 0;
+    height: 55%;
+    cursor: pointer;
+ }
+ 
+ .posts .post {
+    width: calc(50% - 20px);
     border: 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 10px;
     padding: 15px;
-    margin-bottom: 30px;    
-}
-.posts h1{
+    margin-bottom: 30px;
+ }
+ 
+ .posts h1 {
     font-family: 'Pacifico', cursive;
-}
-.posts img{
+ }
+ 
+ .posts img {
     border-radius: 10px;
     margin-bottom: 5px;
     height: 300px;
     object-fit: cover;
-}
-.posts p{
+ }
+ 
+ .posts p {
     padding: 5px;
-    font-family: 'Arvo' , serif;
+    font-family: 'Arvo', serif;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
+    -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
     line-height: 23px;
-}
-.posts .authorAndDate {
+ }
+ 
+ .posts .authorAndDate {
     width: 100%;
     display: flex;
     justify-content: space-between;
     padding: 0px 10px;
  }
-.posts .authorAndDate span:nth-child(1) {
+ 
+ .posts .authorAndDate span:nth-child(1) {
     font-family: 'Dancing Script', cursive;
     font-weight: 700;
  }
-.posts .authorAndDate span:nth-child(2) {
+ .posts .authorAndDate span:nth-child(2) {
     font-family: 'Ubuntu Mono', monospace;
     font-weight: 700;
  }
