--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -1,6 +1,10 @@
 .sidebar {
     flex: 3;
     padding: 0 20px;
+    right: 0%;
+    width: 25%;
+    position: absolute;
+
  }
  
  .sidebar .area {
