--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,10 +1,12 @@
 @import './default.css';
 @import './header.css';
 @import './sidebar.css';
+@import './about.css';
 @import './posts.css';
 @import './home.css';
 @import './fontFamily.css';
 @import './topbar.css' ;
+
 
 
 
