--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,6 +2,7 @@
 @import './header.css';
 @import './sidebar.css';
 @import './about.css';
+@import './logReg.css';
 @import './posts.css';
 @import './home.css';
 @import './fontFamily.css';
