--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,6 +4,7 @@
 @import './about.css';
 @import './logReg.css';
 @import './posts.css';
+@import './add.css';
 @import './home.css';
 @import './fontFamily.css';
 @import './topbar.css' ;
